umol-models-graph/tests/smiles_parsing/snapshots/smiles_parsing__smiles_parsing_suite__run_conformance_test@indigo_3008_P(C1C=CC=CC=1)(C1C=C_.smiles.snap
---
source: umol-models-graph/tests/smiles_parsing/mod.rs
expression: results
---
expected_category: opensmiles_strict
category: opensmiles_strict
opensmiles_strict:
  success: true
  summary:
    sum_formula: C23NO3P
    atom_count: 28
    bond_count: 31
